--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,7 +24,6 @@ body {
 
 body {
 	background: #0c0c0c;
-	/*background: radial-gradient(ellipse at center,  #282828 0%,#060606 100%);*/
 	font-family: sans-serif;
 	overflow: hidden;
 	
@@ -37,7 +36,6 @@ Game
 ==============================================================================*/
 
 .g {
-	/*box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.5);*/
 	box-shadow: 0 0 0 20px #000, 0 0 0 21px #222;
 	left: 50%;
 	opacity: 0;
@@ -69,7 +67,6 @@ Play State - Tiles - Base
 ==============================================================================*/
 
 .tile {
-	/*background: hsla(0, 0%, 100%, 0.05);*/
 	background: #222;
 	left: 0;
 	position: absolute;
@@ -79,7 +76,6 @@ Play State - Tiles - Base
 
 .tile:hover {
 	background: #666;
-	/*background: hsla(0, 0%, 100%, 0.2);*/
 	transition-duration: 0ms;
 }
 
@@ -91,12 +87,9 @@ Play State - Tiles - Path
 
 .tile.path {
 	background: #111;
-	/*background: hsla(0, 0%, 0%, 0.5);*/
-	/*box-shadow: 0 -6px 0 #000;*/
 }
 
 .tile.path:hover {
-	/*background: #311;*/
 	cursor: not-allowed;
 }
 
@@ -139,7 +132,7 @@ Play State - Buttons - General
 	position: relative;
 	text-align: center;
 	text-shadow: 0 1px 1px #000;
-	width: 280px;
+	width: 360px;
 }
 
 .game-title span {
@@ -199,10 +192,11 @@ Play State - Buttons - General
 
 .s1 { width: 39px; }
 .s2 { width: 79px; }
+.s2:last-child { margin-right: 0; }
 .s3 { width: 119px; }
-.s3:last-child { margin-right: 0; }
 .s4 { width: 159px; }
 .s4:last-child { width: 160px; margin-right: 0; }
+.s5 { width: 199px; };
 .s6 { width: 239px; }
 
 .b i {
@@ -354,7 +348,6 @@ Play State - Labels and Displays
 /*==============================================================================
 
 Play State - Tower Select/Build Menu
-some tower menu thrown in for efficiency
 
 ==============================================================================*/
 
@@ -1117,39 +1110,19 @@ Bullets
 
 .bullet.type-e {
 	background: hsl(120, 100%, 80%);
-	/*box-shadow: 0 0 10px hsl(120, 100%, 80%);*/
 }
 
 .bullet.type-w {
 	background: hsl(200, 100%, 80%);
-	/*box-shadow: 0 0 10px hsl(200, 100%, 80%);*/
 }
 
 .bullet.type-a {
 	background: hsl(60, 100%, 80%);
-	/*box-shadow: 0 0 10px hsl(60, 100%, 80%);*/
 }
 
 .bullet.type-f {
 	background: hsl(0, 100%, 80%);
-	/*box-shadow: 0 0 10px hsl(0, 100%, 80%);*/
 }
-
-/*==============================================================================
-
-Splashes
-
-==============================================================================*/
-
-/*.splash {
-	background: hsla(0, 100%, 70%, 0.05);
-	border: 2px solid hsla(0, 100%, 70%, 0.2);
-	border-radius: 50%;
-	left: 0;
-	position: absolute;
-	top: 0;
-	z-index: 150;
-}*/
 
 /*==============================================================================
 
